--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <body>
     <div class="app">
         <p class="titulo"><i class="fa-solid fa-money-check"></i> IMPOSTO DE RENDA <i class="fa-solid fa-money-check"></i></p>
-        <p class="paragrafoImposto">Declarar o Imposto de Renda é uma dificuldade em comum para a maioria das pessoas que precisam declarar, pensando nisso, vimos uma oportunidade de ajudar a população, diminuindo ou, até mesmo, acabando com esse problema.</p>
-        <p class="paragrafoImposto">O intuito desse site é esclarecer possiveis duvidas e explicar como a declaração funciona, com um modo onde é possível fazer uma simulação do seu imposto de renda e, futuramente, desejamos sermos capazes de emitir um documento para os nossos usuários
-            que poderá ser usado na hora de declarar!</p>
+        <p class="paragrafoImposto">Declarar o Imposto de Renda é uma dificuldade comum para a maioria das pessoas, pensando nisso, vimos uma oportunidade de ajudar a população diminuindo esse problema.</p>
+        <p class="paragrafoImposto">O intuito desse site é esclarecer possíveis duvidas e explicar como a declaração funciona, com um modo onde é possível fazer uma simulação do seu imposto de renda e, futuramente conseguir emitir um documento para os nossos usuários que poderá ser usado na hora de declarar!</p>
         <div class="containerOpcoes">
             <a class="opcoes" href="simulacao.html"><i class="fa-solid fa-coins"></i><p>SIMULAÇÃO</p></a>
             <a class="opcoes" href="artigos.html"><i class="fa-solid fa-newspaper"></i><p>ARTIGOS</p></a>
