--- a/simulacao.html
+++ b/simulacao.html
@@ -122,7 +122,7 @@
                     <table class="campoInformacoes"></table>
                 </div>
                 
-                <button class="refazerSimulacao" onclick="voltarSimulacao()">Iniciar outra simulação</button>
+                <div class="btnRefazer"><button class="refazerSimulacao" onclick="voltarSimulacao()">Iniciar outra simulação</button></div>
             </div>
         </div>
         <div class="containerRelatorio">
